# KalmanFilter

./: .gitignore  .pylintrc  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: codecov.yml
src/kalman/: factory.py  filter.py  settings.py
tests/: fake_test.py
tests/kalman/: data.py  factory_test.py  filter_test.py  settings_test.py
tests/kalmana/: factory_test.py
