[metadata]
name = kalmanfilter
version = 1.0.0
author = brogrammer
author_email = mikelaucella@gmail.com
description = A package for kalman filters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichaelJL3/kalmanfilter
project_urls =
    Bug Tracker = https://github.com/MichaelJL3/kalmanfilter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.22.3

[options.packages.find]
where = src